@@ -33,6 +33,7 @@
 - add replicated server selection debug logging.
 - update replicated server selection documentation.
 - use /dev/urandom instead of /dev/random.
+- check for mtab pointing to /proc/mounts.
  
 14/01/2008 autofs-5.0.3
 -----------------------
